# fast-api-learning

./: books.py  books2.py  pyproject.toml
todo_app/: database.py  models.py  pyproject.toml
